--- a/public/barlist.html
+++ b/public/barlist.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>ROoftop Bars in NYC</title>
+    <title>Rooftop Bars in NYC</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 </head>
