--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
 
   <body>
       <article>
+        <h1></h1>
         <h1>Discover Your Next Adventure</h1>
-        <h2>Enjoy an evening overlooking the New York City Skyline</h2>
+          <h3>Enjoy an evening overlooking the New York City Skyline </h3>
+          <h3>at one of New York's Premier Rooftop Bars</h3>
+
+            <a href="barlist.html"><img src="images/upstairs.jpg"></img></a>
         <p>
-            <a href="barlist.html">Check out New York's finest rooftop bars!</a>
-            
+            <h2><a href="barlist.html">Check out New York's finest rooftop bars!</a></h2>            
         </p>
       </article>
     
