--- a/public/barlist.html
+++ b/public/barlist.html
@@ -9,7 +9,7 @@
 		body {
 		background-image: url("images/cocktail.jpg");
 		background-repeat: no-repeat;
-		background-position: center;
+		background-position: left;
 		background-color: black;
 		}
 	</style>
@@ -18,7 +18,7 @@
 <body>	
 		<div id="main">			
 			<div id="home" class="main_box">
-				<h1>Enjoy the Breathtaking View of New York</h1>
+				<h1>Enjoy the Breathtaking Views of New York</h1>
 				<h4>BARS GROUPED BY BOROUGH</h4>
 				<p>
 					<div class="col_12 float_l">
