Added bar websites

--- a/public/bars/bar54.html
+++ b/public/bars/bar54.html
@@ -14,11 +14,13 @@
 				<img src="../images/bar54.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://www.hyatt.com/en-US/hotel/new-york/hyatt-centric-times-square-new-york/nycts/dining"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Sunday thru Wednesday: 4pm - 12am</li>
-						<li>Thursday thru Saturday: 4pm - 1am</li>
-					</ul>
+						<h6>Sunday, Monday, Tuesday, Wednesday: 4pm - 12am</h6>
+						<h6>Thursday thru Saturday: 4pm - 1am</h6>
+					
 				</div>
 
 				<div >
