--- a/public/bars/happybe.html
+++ b/public/bars/happybe.html
@@ -14,11 +14,13 @@
 				<img src="../images/happybe.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://happybenyc.com/"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Monday thru Thursday: 4pm - 12am</li>
-						<li>Friday thru Sunday: 4pm - 5am</li>
-					</ul>
+						<h6>Monday, Tuesday, Wednesday, Thursday: 4pm - 12am</h6>
+						<h6>Friday, Saturday, Sunday: 4pm - 5am</h6>
+					
 				</div>
 
 				<div >
