--- a/public/bars/jimmy.html
+++ b/public/bars/jimmy.html
@@ -14,11 +14,13 @@
 				<img src="../images/jimmy.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://www.jimmysoho.com/"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Sunday thru Wednesday: 5pm - 1am</li>
-						<li>Thursday thru Saturday: 5pm - 2am</li>
-					</ul>
+						<h6>Sunday, Monday, Tuesday, Wednesday: 5pm - 1am</h6>
+						<h6>Thursday thru Saturday: 5pm - 2am</h6>
+					
 				</div>
 
 				<div >
