--- a/public/bars/salondening.html
+++ b/public/bars/salondening.html
@@ -14,11 +14,13 @@
 				<img src="../images/salon.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://www.peninsula.com/en/new-york/hotel-fine-dining/salon-de-ning-midtown-rooftop-bar"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Tuesday thru Saturday: 5pm - 12am</li>
-						<li>Sunday and Monday: Closed</li>
-					</ul>
+					<h6>Tuesday, Wednesday, Thursday, Friday, Saturday: 5pm - 12am</h6>
+					<h6>Sunday and Monday: Closed</h6>
+					
 				</div>
 
 				<div >
