--- a/public/bars/stcloud.html
+++ b/public/bars/stcloud.html
@@ -14,11 +14,13 @@
 				<img src="../images/stcloud.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://theknickerbocker.com/dine/st-cloud/?utm_source=local-listings&utm_medium=organic&utm_campaign=local-listings"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Tuesday thru Saturday: 4pm - 11pm</li>
-						<li>Sunday and Monday: Closed</li>
-					</ul>
+						<h6>Tuesday, Wednesday, Thursday, Friday, Saturday: 4pm - 11pm</h6>
+						<h6>Sunday and Monday: Closed</h6>
+					
 				</div>
 
 				<div >
