--- a/public/bars/sushilab.html
+++ b/public/bars/sushilab.html
@@ -14,11 +14,13 @@
 				<img src="../images/sushilab.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://sushilab.nyc/"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Monday thru Friday: 12-3pm, 5-10pm</li>
-						<li>Saturday and Sunday: 12-10pm</li>
-					</ul>
+						<h6>Monday thru Friday: 12-3pm, 5-10pm</h6>
+						<h6>Saturday and Sunday: 12-10pm</h6>
+					
 				</div>
 
 				<div >
