--- a/public/bars/theempirerooftop.html
+++ b/public/bars/theempirerooftop.html
@@ -14,13 +14,15 @@
 				<img src="../images/empire.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://www.empirehotelnyc.com/dining/empire-rooftop"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Monday, Tuesday: 2 - 11pm</li>
-						<li>Wednesday, Thursday, Friday: 2pm - 1am</li>
-						<li>Saturday: 12pm - 1am</li>
-						<li>Sunday 12 - 11pm</li>
-					</ul>
+						<h6>Monday, Tuesday: 2 - 11pm</h6>
+						<h6>Wednesday, Thursday, Friday: 2pm - 1am</h6>
+						<h6>Saturday: 12pm - 1am</h6>
+						<h6>Sunday 12 - 11pm</h6>
+					
 				</div>
 
 				<div >
