--- a/public/bars/upstairs.html
+++ b/public/bars/upstairs.html
@@ -14,14 +14,16 @@
 				<img src="../images/upstairs.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a target="blank" href="https://www.upstairsnyc.com/"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Friday: 5pm - 2am</li>
-						<li>Saturday: 12pm - 2am</li>
-						<li>Sunday: 12pm - 11pm</li>
-						<li>Monday: 5pm - 11pm</li>
-						<li>Tuesday, Wednesday, Thursday: 5pm - 12am</li>
-					</ul>
+						<h6>Friday: 5pm - 2am</h6>
+						<h6>Saturday: 12pm - 2am</h6>
+						<h6>Sunday: 12pm - 11pm</h6>
+						<h6>Monday: 5pm - 11pm</h6>
+						<h6>Tuesday, Wednesday, Thursday: 5pm - 12am</h6>
+					
 				</div>
 
 				<div >
