--- a/public/bars/havenrooftop.html
+++ b/public/bars/havenrooftop.html
@@ -14,11 +14,13 @@
 				<img src="../images/haven.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="http://www.havenrooftop.com"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Monday thru Friday: 12-3pm, 4-11pm</li>
-						<li>Saturday, Sunday: 11am - 3pm, 4:30 - 11pm</li>
-					</ul>
+						<h6>Monday thru Friday: 12-3pm, 4-11pm</h6>
+						<h6>Saturday, Sunday: 11am - 3pm, 4:30 - 11pm</h6>
+					
 				</div>
 
 				<div >
