--- a/public/bars/roofat66park.html
+++ b/public/bars/roofat66park.html
@@ -14,11 +14,13 @@
 				<img src="../images/roofat66.jpg" alt="image" class="img_frame img_float_l" />
 				
 				<div class="col_12 float_l">
+
+					<a href="https://www.kitano.com/dining/roof-at-66-park"><h2>Website</h2></a>
+
 					<h2>Hours</h2>
-					<ul>
-						<li>Tuesday thru Saturday: 5pm - 12am</li>
-						<li>Sunday and Monday: Closed</li>
-					</ul>
+						<h6>Tuesday, Wednesday, Thursday, Friday, Saturday: 5pm - 12am</h6>
+						<h6>Sunday and Monday: Closed</h6>
+					
 				</div>
 
 				<div >
