--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
       <article>
         <h1></h1>
-        <h1>Discover Your Next Adventure</h1>
+        <h1>New York City's Best Rooftop Bars</h1>
           <h3>Enjoy an evening overlooking the New York City Skyline </h3>
           <h3>at one of New York's Premier Rooftop Bars</h3>
 
